--- a/src/employee/management/Project.form
+++ b/src/employee/management/Project.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
@@ -237,7 +237,7 @@
             <Component class="javax.swing.JTable" name="projecttbl">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="13" rowCount="4">
+                  <Table columnCount="14" rowCount="4">
                     <Column editable="true" title="Number" type="java.lang.Object"/>
                     <Column editable="true" title="Employee ID" type="java.lang.Object"/>
                     <Column editable="true" title="Name" type="java.lang.Object"/>
@@ -250,6 +250,7 @@
                     <Column editable="true" title="Mark" type="java.lang.Object"/>
                     <Column editable="true" title="Status" type="java.lang.Object"/>
                     <Column editable="true" title="Project Description" type="java.lang.Object"/>
+                    <Column editable="true" title="Project Message" type="java.lang.Object"/>
                     <Column editable="true" title="Submitted Date" type="java.lang.Object"/>
                   </Table>
                 </Property>
@@ -311,6 +312,11 @@
                       <Renderer/>
                     </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
